--- a/bin/install
+++ b/bin/install
@@ -1,4 +1,4 @@
 #!/bin/bash
 cd ~/.vim
 [[ -h "$HOME/.vimrc" ]] || ln -s ~/.vim/vimrc ~/.vimrc
-vim +PluginInstall +qall
+vim -E -s -c "source ~/.vimrc" -c PluginInstall -c qa
