--- a/bin/install
+++ b/bin/install
@@ -2,12 +2,11 @@
 cd ~/.vim
 [[ -h "$HOME/.vimrc" ]] || ln -s ~/.vim/vimrc ~/.vimrc
 
-if !(grep --quiet --no-messages lazy_load ~/.vim/bundle/Vundle.vim/autoload/vundle.vim); then
-  echo "Installing Vundle..."
+if !(grep --quiet --no-messages vim-plug ~/.vim/autoload/plug.vim); then
+  echo "Installing Plug..."
   echo ""
-  mkdir -p ~/.vim/bundle
-  rm -rf ~/.vim/bundle/Vundle.vim
-  git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
+  curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+    https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 fi
 
-vim -c VundleInstall -c quitall
+vim -c PlugInstall -c quitall
